--- a/.env-example
+++ b/.env-example
@@ -2,4 +2,4 @@ NEXT_PUBLIC_REALM_APP_ID=<APP_ID>
 
 # NEXT_PUBLIC_REALM_BASE_URL=eu-central-1.aws.realm.mongodb.com
 
-NEXT_PUBLIC_REALM_BASE_URL="https://cloud.mongodb.com"
+NEXT_PUBLIC_REALM_BASE_URL="realm.mongodb.com"
