--- a/realm-backend/realm_config.json
+++ b/realm-backend/realm_config.json
@@ -1,8 +1,9 @@
 {
-    "config_version": 20210101,
     "app_id": "mongo-realm-netflix-search-gstvq",
+    "config_version": 20210101,
     "name": "mongo-realm-netflix-search",
     "location": "US-VA",
+    "provider_region": "aws-us-east-1",
     "deployment_model": "GLOBAL",
     "environment": "production"
 }
