--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "mongohost": "npm run deploy && npm run build && cp -a ./build/ ./hosting/files && realm-cli push --remote=tasktracker-bmumi --include-hosting",
     "deploy": "git add . && git commit -m Build && git push",
     "realm:init": "npm run deploy && cd ./realm-backend && realm-cli app init",
-    "deploy:backend": "npm run deploy && cd ./realm-backend && realm-cli push"
+    "realm:pull": "npm run deploy && realm-cli pull",
+    "realm:push": "npm run deploy && cd ./realm-backend && realm-cli push"
   },
   "dependencies": {
     "@headlessui/react": "^1.4.3",
